added point values to problems

--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -48,11 +48,21 @@
    "id": "4ce77d26",
    "metadata": {},
    "source": [
-    "# Q1: Finite-Horizon LQR\n",
+    "# Q1: Finite-Horizon LQR (50 pts)\n",
     "For this problem we are going to consider a \"double integrator\" for our dynamics model. This system has a state $x \\in \\mathbb{R}^4$, and control $u \\in \\mathbb{R}^2$, where the state describes the 2D position $p$ and velocity $v$ of an object, and the control is the acceleration $a$ of this object.  The state and control are the following:\n",
     "$$\\begin{align} x &= [p_1, p_2, v_1, v_2] \\\\ u &= [a_1, a_2] \\end{align}$$\n",
     "And the continuous time dynamics for this system are the following:\n",
     "$$\\begin{align} \\dot{x} =  \\begin{bmatrix} 0 & 0 & 1 & 0 \\\\ 0 & 0 & 0 & 1 \\\\ 0 & 0 & 0 & 0 \\\\ 0 & 0 & 0 & 0 \\end{bmatrix} x + \\begin{bmatrix} 0 & 0 \\\\ 0 & 0 \\\\ 1 & 0 \\\\ 0 & 1 \\end{bmatrix} \\end{align} u$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d976cfe8",
+   "metadata": {},
+   "source": [
+    "## Part A: Discretize the model (5 pts)\n",
+    "\n",
+    "Use the matrix exponential (`exp` in Julia) to discretize the continuous time model. See the [first recitation](https://youtu.be/EjAiRam95U4) if you're unsure of what to do. "
    ]
   },
   {
@@ -110,7 +120,7 @@
    "id": "c6154e8b",
    "metadata": {},
    "source": [
-    "## Part (A): Finite Horizon LQR via Convex Optimization"
+    "## Part B: Finite Horizon LQR via Convex Optimization (15 pts)"
    ]
   },
   {
@@ -123,15 +133,26 @@
     " \\text{st} \\quad & x_1 = x_{\\text{IC}} \\\\ \n",
     " & x_{i+1} = A x_i + Bu_i \\quad \\text{for } i = 1,2,\\ldots,N-1 \n",
     " \\end{align}$$\n",
-    " This problem is a convex optimization problem since the cost function is a convex quadratic and the constraints are all linear equality constraints. We will setup and solve this exact problem using the `Convex.jl` modeling package. (See 2/16 Recitation video for help with this package.)  Your job in the block below is to fill out a function `Xcvx,Ucvx = convex_trajopt(A,B,Q,R,Qf,N,x_ic)`, where you will form and solve the above optimization problem. "
+    " This problem is a convex optimization problem since the cost function is a convex quadratic and the constraints are all linear equality constraints. We will setup and solve this exact problem using the `Convex.jl` modeling package. (See 2/16 Recitation video for help with this package. [Notebook is here](https://github.com/Optimal-Control-16-745/recitations/blob/main/2_17_recitation/Convex.jl_tutorial.ipynb).)  Your job in the block below is to fill out a function `Xcvx,Ucvx = convex_trajopt(A,B,Q,R,Qf,N,x_ic)`, where you will form and solve the above optimization problem. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "11a5cfdc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "convex_trajopt (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# utilities for converting to and from vector of vectors <-> matrix \n",
     "function mat_from_vec(X::Vector{Vector{Float64}})::Matrix\n",
@@ -141,9 +162,18 @@
     "end\n",
     "function vec_from_mat(Xm::Matrix)::Vector{Vector{Float64}}\n",
     "    # convert a matrix into a vector of vectors \n",
-    "    X = [x for x in eachcol(Xm)]\n",
+    "    X = [X[:,i] for i in size(Xm,2)]\n",
     "    return X \n",
     "end\n",
+    "\"\"\"\n",
+    "X,U = convex_trajopt(A,B,Q,R,Qf,N,x_ic; verbose = false)\n",
+    "\n",
+    "This function takes in a dynamics model x_{k+1} = A*x_k + B*u_k\n",
+    "and LQR cost Q,R,Qf, with a horizon size N, and initial condition \n",
+    "x_ic, and returns the optimal X and U's from the above optimization \n",
+    "problem. You should use the `vec_from_mat` function to convert the \n",
+    "solution matrices from cvx into vectors of vectors (vec_from_mat(X.value))\n",
+    "\"\"\"\n",
     "function convex_trajopt(A::Matrix,      # A matrix \n",
     "                        B::Matrix,      # B matrix \n",
     "                        Q::Matrix,      # cost weight \n",
@@ -170,7 +200,7 @@
     "    U = cvx.Variable(nu, N - 1)\n",
     "    \n",
     "    # create cost \n",
-    "    # hint: you can't do x'*Q*x in Convex.jl, you must do quadform(x,Q)\n",
+    "    # hint: you can't do x'*Q*x in Convex.jl, you must do cvx.quadform(x,Q)\n",
     "    # hint: add all of your cost terms to `cost` \n",
     "    cost = 0 \n",
     "    for k = 1:(N-1)\n",
@@ -355,7 +385,7 @@
    "id": "5c80ae78",
    "metadata": {},
    "source": [
-    "## Part (B): Finite-Horizon LQR via Ricatti \n",
+    "## Part C: Finite-Horizon LQR via Ricatti (10 pts)\n",
     "Now we are going to solve the original finite-horizon LQR problem:\n",
     "$$ \\begin{align} \\min_{x_{1:N},u_{1:N-1}} \\quad & \\sum_{i=1}^{N-1} \\bigg[ \\frac{1}{2} x_i^TQx_i + \\frac{1}{2} u_i^TRu_i \\bigg] + \\frac{1}{2}x_N^TQ_fx_N\\\\ \n",
     " \\text{st} \\quad & x_1 = x_{\\text{IC}} \\\\ \n",
@@ -363,24 +393,26 @@
     " \\end{align}$$\n",
     " with a Ricatti recursion instead of convex optimization. We describe our optimal cost-to-go function (aka the Value function) as the following:\n",
     " \n",
-    " $$V_k(x) = \\frac{1}{2}x^TP_kx$$\n",
-    " \n",
-    " To do the Ricatti recursion, we initialize $P_N = Q_f$, and iterate backwards from $N-1$ to $1$ with the following recursion:\n",
-    " \n",
-    " $$ \\begin{align}\n",
-    " K_k &= (R + B^TP_{k+1}B)^{-1}(B^TP_{k+1}A) \\\\ \n",
-    " P_k &= Q + K_k^TRK_k + (A - BK_k)^TP_{k+1}(A - BK_k)\n",
-    " \\end{align}$$\n",
-    " Which gives us an optimal policy of the following:\n",
-    " $$ u_k = -K_kx_k $$ "
+    " $$V_k(x) = \\frac{1}{2}x^TP_kx$$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9c43c4b2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "fhlqr"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "use the Ricatti recursion to calculate the cost to go quadratic matrix P and \n",
@@ -410,7 +442,7 @@
     "    P[N] = deepcopy(Qf)\n",
     "    \n",
     "    # Ricatti \n",
-    "    for k = (N-1):(-1):1 \n",
+    "    for k = NaN:NaN\n",
     "        # TODO \n",
     "        \n",
     "    end\n",
@@ -547,7 +579,7 @@
    "id": "06ac015c",
    "metadata": {},
    "source": [
-    "## Part (C): Why LQR is so great\n",
+    "## Part D: Why LQR is so great (10 pts)\n",
     "\n",
     "Now we are going to emphasize two reasons why the feedback policy from LQR is so useful:\n",
     "\n",
@@ -678,7 +710,7 @@
    "id": "b9a3329e",
    "metadata": {},
    "source": [
-    "## Part D: Infinite-horizon LQR \n",
+    "## Part E: Infinite-horizon LQR (10 pts)\n",
     "Up until this point, we have looked at finite-horizon LQR which only considers a finite number of timesteps in our trajectory.  When this problem is solved with a Ricatti recursion, there is a new feedback gain matrix $K_k$ for each timestep. As the length of the trajectory increases, the first feedback gain matrix $K_1$ will begin to converge on what we call the \"infinite-horizon LQR gain\".  This is the value that $K_1$ converges to as $N \\rightarrow \\infty$.\n",
     "\n",
     "Below, we will plot the values of $P$ and $K$ throughout the horizon and observe this convergence. "
