--- a/Q3.ipynb
+++ b/Q3.ipynb
@@ -64,7 +64,7 @@
    "id": "57a19484",
    "metadata": {},
    "source": [
-    "# Q3: Optimal Rendezvous and Docking \n",
+    "# Q3: Optimal Rendezvous and Docking (50 pts)\n",
     "\n",
     "In this example, we are going to use convex optimization to control the SpaceX Dragon 1 spacecraft as it docks with the International Space Station (ISS). The dynamics of the Dragon vehicle can be modeled with [Clohessy-Wiltshire equations](https://en.wikipedia.org/wiki/Clohessy%E2%80%93Wiltshire_equations), which is a linear dynamics model in continuous time. The state and control of this system are the following:\n",
     "\n",
@@ -92,7 +92,7 @@
    "id": "dbdd42a1",
    "metadata": {},
    "source": [
-    "## Part A: Discretize the dynamics \n",
+    "## Part A: Discretize the dynamics (5 pts)\n",
     "\n",
     "Use the matrix exponential to convert the linear ODE into a linear discrete time model (hint: the matrix exponential is just `exp()` in Julia when called on a matrix."
    ]
@@ -158,7 +158,7 @@
    "id": "288de1e0",
    "metadata": {},
    "source": [
-    "## Part B: LQR \n",
+    "## Part B: LQR (10 pts)\n",
     "Now we will take a given reference trajectory `X_ref` and track it with finite-horizon LQR. Remember that finite-horizon LQR is solving this problem:\n",
     "$$ \\begin{align} \\min_{x_{1:N},u_{1:N-1}} \\quad & \\sum_{i=1}^{N-1} \\bigg[ \\frac{1}{2} (x_i - x_{ref, i})^TQ(x_i - x_{ref, i}) + \\frac{1}{2} u_i^TRu_i \\bigg] + \\frac{1}{2}(x_N- x_{ref, N})^TQ_f\n",
     "(x_N- x_{ref, N})\\\\ \n",
@@ -259,7 +259,7 @@
    "id": "c517151c",
    "metadata": {},
    "source": [
-    "## Part C: Convex Trajectory Optimization \n",
+    "## Part C: Convex Trajectory Optimization (15 pts)\n",
     "\n",
     "Now we are going to assume that we have a perfect model (assume there is no sim to real gap), and that we have a perfect state estimate. With this, we are going to solve our control problem as a convex trajectory optimization problem. \n",
     "\n",
@@ -404,7 +404,7 @@
    "id": "2389dbb1",
    "metadata": {},
    "source": [
-    "## Part D: Convex MPC\n",
+    "## Part D: Convex MPC (20 pts)\n",
     "\n",
     "In part C, we solved for the optimal rendezvous trajectory using convex optimization, and verified it by simulating it in an open loop fashion (no feedback). This was made possible because we assumed that our linear dynamics were exact, and that we had a perfect estimate of our state. In reality, there are many issues that would prevent this open loop policy from being successful, here are a few:\n",
     "\n",
