--- a/Q3.ipynb
+++ b/Q3.ipynb
@@ -61,6 +61,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8ef2cc03",
+   "metadata": {},
+   "source": [
+    "## Is LQR the answer for everything?\n",
+    "\n",
+    "Unfortunately no, for two reasons: LQR must have a quadratic cost, and LQR is unable to reason about constraints. While a quadratic cost is common in control, there are other available convex cost functions that may better motivate the desired behavior of the system. These costs can be things like an L1 norm on the control inputs ($\\|u\\|_1$), or an L2 error ($\\|x - x_{goal}\\|_2$). Also, control problems often have constraints like path constraints, control bounds, or terminal constraints, that can't be handled with LQR. With the addition of these constraints on convex, the trajectory optimization problem is stil convex and easy to solve, but we can't just get an optimal gain $K$ and apply a feedback policy in these situations. \n",
+    "\n",
+    "The solution to this is Model Predictive Control (MPC). In MPC, we are setting up and solving a convex trajectory optimization at every time step, optimizing over some horizon or window into the future, and executing the first control in the solution. To see how this works, we are going to try this for a classic space control problem: the rendezvous. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "57a19484",
    "metadata": {},
    "source": [
