slight tweaks to all 3

--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -275,9 +275,7 @@
     "    \n",
     "    # TODO: simulate with the dynamics with control Ucvx, storing the \n",
     "    # state in Xsim \n",
-    "    \n",
-    "    # now let's simulate using Ucvx on our discrete time dynamics\n",
-    "    \n",
+    "        \n",
     "    # initial condition \n",
     "    Xsim = [zeros(nx) for i = 1:N]\n",
     "    Xsim[1] = 1*x_ic \n",
@@ -777,9 +775,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: complete this infinite horizon LQR function where \n",
-    "# you do the ricatti recursion until the cost to go matrix \n",
-    "# S converges to a steady value |P_k - P_{k+1}| ≤ tol \n",
+    "\"\"\"\n",
+    "P,K = ihlqr(A,B,Q,R)\n",
+    "\n",
+    "TODO: complete this infinite horizon LQR function where \n",
+    "you do the ricatti recursion until the cost to go matrix \n",
+    "P converges to a steady value |P_k - P_{k+1}| ≤ tol \n",
+    "\"\"\"\n",
     "function ihlqr(A::Matrix,       # vector of A matrices \n",
     "               B::Matrix,       # vector of B matrices\n",
     "               Q::Matrix,       # cost matrix Q \n",
@@ -798,15 +800,7 @@
     "    for ricatti_iter = 1:max_iter \n",
     "\n",
     "        # TODO \n",
-    "        Pnew = 0*P \n",
-    "        \n",
-    "        # check for convergence \n",
-    "        if norm(P-Pnew,Inf)<tol \n",
-    "            return Pnew, K \n",
-    "        end\n",
-    "        \n",
-    "        # update P \n",
-    "        P = 1*Pnew \n",
+    "\n",
     "    end\n",
     "    error(\"ihlqr did not converge\")\n",
     "end\n",
@@ -823,7 +817,7 @@
     "    R = .5*diagm(ones(nu))\n",
     "    P, K = ihlqr(A,B,Q,R)\n",
     "    \n",
-    "    # check this S is in fact a solution to the Ricatti equation\n",
+    "    # check this P is in fact a solution to the Ricatti equation\n",
     "    @test typeof(P) == Matrix{Float64} \n",
     "    @test typeof(K) == Matrix{Float64}\n",
     "    @test 1e-13 < norm(Q + K'*R*K + (A - B*K)'P*(A - B*K) - P) < 1e-3\n",
