fully fixed `mat_from_vec` typo

--- a/Q3.ipynb
+++ b/Q3.ipynb
@@ -54,7 +54,7 @@
     "end\n",
     "function vec_from_mat(Xm::Matrix)::Vector{Vector{Float64}}\n",
     "    # convert a matrix into a vector of vectors \n",
-    "    X = [X[:,i] for i = 1:size(Xm,2)]\n",
+    "    X = [Xm[:,i] for i = 1:size(Xm,2)]\n",
     "    return X \n",
     "end"
    ]
