add cartpole image description

--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -77,6 +77,9 @@
     "<div>\n",
     "<img src=\"attachment:cartpole.png\" width=\"300\"/>\n",
     "</div>\n",
+    "(if this image doesn't show up, check out `cartpole.png`)\n",
+    "\n",
+    "\n",
     "with a cart position $p$ and pole angle $\\theta$. We are first going to linearize the nonlinear discrete dynamics of this system about the point where $p = 0$, and $\\theta = 0$ (no velocities), and use an infinite horizon LQR controller about this linearized state to stabilize the cartpole about this goal state.  The dynamics of the cartpole are parametrized by the mass of the cart, the mass of the pole, and the length of the pole. To simulate a \"sim to real gap\", we are going to design our controllers around an estimated set of problem parameters `params_est`, and simulate our system with a different set of problem parameters `params_real`. "
    ]
   },
